<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_title"
    android:orientation="vertical">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/timeText"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/scoreText"
            android:textSize="32sp" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:text="@string/titleText"
            android:textSize="48sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/discovery_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="40dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/discovery_button"
            android:gravity="center"
            android:text="@string/discovery_text"
            android:textColor="#fcd405" />

        <Button
            android:id="@+id/nick_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="40dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/nick_button"
            android:gravity="center"
            android:text="@string/nick_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/disney_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="30dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/disney_button"
            android:gravity="center"
            android:text="@string/disney_text"
            android:textColor="#fdf405" />

        <Button
            android:id="@+id/cartoon_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="30dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/cartoon_button"
            android:gravity="center"
            android:text="@string/cartoon_text"
            android:textColor="#E6E6E6"
            style="@style/MyButtonStyle.Cartoon"/>
    </GridLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/mute_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/mute_button"
            android:gravity="center"
            android:text="@string/mute_music_text"
            android:textColor="#0A5AEA"
            style="@style/MyButtonStyle.Mute"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>