<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_more"
    tools:context=".MoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/synopsis_label_text"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="#B2CEC6"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/synopsis_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/synopsis_text"
            android:textSize="16sp"
            android:textColor="#557349"
            android:layout_marginTop="50dp"/>

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:id="@+id/video_player"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/back_button"
            android:text="@string/back_text"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>